Update .deb and .rpm releases